--- a/estilos/style.css
+++ b/estilos/style.css
@@ -188,12 +188,11 @@ footer a:hover {
     font-weight: normal;
 }
 
-/* Estilo para o carrinho lateral */
 .carrinho {
     position: fixed;
     top: 0;
     overflow-y: auto;
-    right: -400px;  /* Inicialmente escondido */
+    right: -400px;  
     width: 300px;
     height: 100vh;
     background-color: #f2f2f2;
@@ -230,7 +229,6 @@ footer a:hover {
     background-color: #F2A663;
 }
 
-/* Estilo do botão de exibir carrinho */
 button {
     position: fixed;
     bottom: 20px;
